--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.env
-*.env
-__pycache__/
-.ipynb_checkpoints/
-*.sqlite
-*.db
-data/
-models/
-faiss_index/
+# .env
+# *.env
+# __pycache__/
+# .ipynb_checkpoints/
+# *.sqlite
+# *.db
+# data/
+# models/
+# faiss_index/
